--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: 傻想者
 email: yanxiaoguang@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  傻傻地坚持做一件事，挺不住就放弃，然后把这件事再从头来过。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://iamafool.github.io" # the base hostname & protocol for your site
 twitter_username: iamafool
