--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://ibm.how" # the base hostname & protocol for your site
 twitter_username: iamafool
-github_username:  iamafool
+github_username: iamafool
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-architect
+theme: minima
